[gd_scene load_steps=17 format=3 uid="uid://cllo3pfqarwug"]

[ext_resource type="Script" path="res://Components/Clickable/ClickableComponent.gd" id="1_dt3tx"]
[ext_resource type="Script" path="res://Scenes/Equipment/Alembic/Alembic.gd" id="1_y1pir"]
[ext_resource type="Script" path="res://Components/DropOff/DropOffComponent.gd" id="2_fp3ri"]
[ext_resource type="Texture2D" uid="uid://dt1fuobt4lerk" path="res://Assets/Sprites/alembic.png" id="2_pu68q"]
[ext_resource type="Script" path="res://Components/Item/ItemComponent.gd" id="5_v3dkg"]
[ext_resource type="Script" path="res://Components/TakesIngredients/TakesIngredientsComponent.gd" id="6_72vtb"]
[ext_resource type="Script" path="res://Components/RecipeTable/RecipeTableComponent.gd" id="7_l44ga"]
[ext_resource type="Resource" uid="uid://c7eflg5t1nlmg" path="res://Resources/Ingredients/Raw/Water.tres" id="7_ohnno"]
[ext_resource type="Resource" uid="uid://0ue72ao6x0nw" path="res://Resources/Potions/DrinkingWater.tres" id="9_6anr0"]
[ext_resource type="Script" path="res://Components/Pickup/PickUpComponent.gd" id="10_3n63h"]
[ext_resource type="Texture2D" uid="uid://3ba750fxv8qd" path="res://Assets/Sprites/star.png" id="10_dhlhr"]
[ext_resource type="Resource" uid="uid://disvb3cahmpcp" path="res://Resources/RecipeTables/AlembicRecipeTable.tres" id="12_072s4"]
[ext_resource type="AudioStream" uid="uid://d24ld0vvspuwo" path="res://Assets/Audio/Cauldron/Bubbles Big Long A.wav" id="13_gqo65"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ylh1"]
size = Vector2(57.25, 9.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfmjc"]
size = Vector2(64, 61)

[sub_resource type="CircleShape2D" id="CircleShape2D_rjv17"]
radius = 26.0192

[node name="Alembic" type="StaticBody2D" groups=["Invisibility"]]
script = ExtResource("1_y1pir")

[node name="AlembicSprite" type="Sprite2D" parent="."]
position = Vector2(-0.500004, 0.500002)
scale = Vector2(0.243164, 0.194336)
texture = ExtResource("2_pu68q")

[node name="HarvestableSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -49)
scale = Vector2(0.0522461, 0.0424805)
texture = ExtResource("10_dhlhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7.9375)
shape = SubResource("RectangleShape2D_3ylh1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_gqo65")

[node name="ClickableComponent" type="Area2D" parent="."]
script = ExtResource("1_dt3tx")
tooltip_text = "Alembic"

[node name="Label" type="Label" parent="ClickableComponent"]
offset_right = 40.0
offset_bottom = 23.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableComponent"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_mfmjc")

[node name="DropOffComponent" type="Area2D" parent="." node_paths=PackedStringArray("takes_ingredients_component")]
position = Vector2(-1, 51)
collision_layer = 8
collision_mask = 0
script = ExtResource("2_fp3ri")
takes_ingredients_component = NodePath("../TakesIngredientComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropOffComponent"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_rjv17")

[node name="PickUpComponent" type="Area2D" parent="." node_paths=PackedStringArray("item_component")]
position = Vector2(-1, 51)
collision_layer = 4
collision_mask = 0
script = ExtResource("10_3n63h")
item_component = NodePath("../ItemComponent")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpComponent"]
shape = SubResource("CircleShape2D_rjv17")

[node name="ItemComponent" type="Node" parent="."]
script = ExtResource("5_v3dkg")

[node name="TakesIngredientComponent" type="Node2D" parent="."]
position = Vector2(-1, 51)
script = ExtResource("6_72vtb")
takes_ingredients = Array[Resource("res://Scripts/IngredientResource.gd")]([ExtResource("7_ohnno")])

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RecipeTableComponent" type="Node" parent="."]
script = ExtResource("7_l44ga")
default = ExtResource("9_6anr0")
recipe_table = ExtResource("12_072s4")

[connection signal="mouse_entered" from="ClickableComponent" to="ClickableComponent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickableComponent" to="ClickableComponent" method="_on_mouse_exited"]
[connection signal="drop_off_ingredient_event" from="DropOffComponent" to="." method="_on_drop_off_component_drop_off_ingredient_event"]
[connection signal="picked_up_event" from="PickUpComponent" to="." method="_on_pick_up_component_picked_up_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
